--- a/pombola/core/static/sass/_page.scss
+++ b/pombola/core/static/sass/_page.scss
@@ -16,7 +16,7 @@
 
 #page {
   background: $colour_white;
-  padding-bottom: 30px;
+  padding: 30px 0;
   &.down {
     padding: 10px;
     h2 {
@@ -113,7 +113,7 @@
         display: none; } }
     ul.comments li section {
       // max-width:590px;
-    } }  
+    } }
   h2, h3 {
     border-top: 4px solid $colour_primary;
     background: $colour_muted;
